--- a/SapinesPolicyAndBillingTest/test-output/old/Sapiens Adaptik Policy and Billing Pro Apps Sanity Run Suite/methods.html
+++ b/SapinesPolicyAndBillingTest/test-output/old/Sapiens Adaptik Policy and Billing Pro Apps Sanity Run Suite/methods.html
@@ -1,34 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Sapiens Adaptik Policy and Billing Pro Apps Sanity Run Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9191d5">  <td>22/02/13 18:57:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.adaptikPolicyAndBilling.qa.testCases.LoginPageTest@26e356f0]">loginPageTitleTest</td> 
-  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="d661ba">  <td>22/02/13 18:59:39</td>   <td>130046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchPageTest.setupTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@4d154ccd]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td>  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="9191d5">  <td>22/02/13 18:57:38</td>   <td>9182</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:1, instance:com.adaptikPolicyAndBilling.qa.testCases.LoginPageTest@26e356f0]">loginTest</td> 
-  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="9191d5">  <td>22/02/13 18:58:07</td>   <td>37764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDownTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.LoginPageTest@26e356f0]">&lt;&lt;tearDownTest</td> 
-<td>&nbsp;</td>  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="d661ba">  <td>22/02/13 19:00:14</td>   <td>165673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.closeBrowser()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@4d154ccd]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="d661ba">  <td>22/02/13 19:00:14</td>   <td>165673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.closeBrowser()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@4d154ccd]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="d661ba">  <td>22/02/13 18:59:39</td>   <td>130046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchPageTest.setupTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@4d154ccd]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td>  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="d661ba">  <td>22/02/13 18:59:39</td>   <td>130046</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchPageTest.setupTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@4d154ccd]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td>  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="d661ba">  <td>22/02/13 19:00:14</td>   <td>165673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.closeBrowser()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@4d154ccd]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="9191d5">  <td>22/02/13 18:58:07</td>   <td>37764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDownTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.LoginPageTest@26e356f0]">&lt;&lt;tearDownTest</td> 
-<td>&nbsp;</td>  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="9191d5">  <td>22/02/13 18:57:29</td>   <td>390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setupTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.LoginPageTest@26e356f0]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td>  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="d661ba">  <td>22/02/13 19:00:12</td>   <td>163369</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.AccountSearch(java.lang.String)[pri:1, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@4d154ccd]">AccountSearch</td> 
-  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="9191d5">  <td>22/02/13 18:57:29</td>   <td>390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setupTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.LoginPageTest@26e356f0]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td>  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="d661ba">  <td>22/02/13 18:59:02</td>   <td>93591</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.SearchPageTitleTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@4d154ccd]">SearchPageTitleTest</td> 
-  <td>main@899543194</td>   <td></td> </tr>
-<tr bgcolor="d661ba">  <td>22/02/13 19:00:12</td>   <td>163369</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.AccountSearch(java.lang.String)[pri:1, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@4d154ccd]">AccountSearch</td> 
-  <td>main@899543194</td>   <td></td> </tr>
+<tr bgcolor="7fa8df">  <td>22/02/14 02:59:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:2, instance:com.adaptikPolicyAndBilling.qa.testCases.LoginPageTest@37864b77]">loginTest</td> 
+  <td>main@379886173</td>   <td></td> </tr>
+<tr bgcolor="a8bd85">  <td>22/02/14 03:00:16</td>   <td>71405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.closeBrowser()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@7063686f]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@379886173</td>   <td></td> </tr>
+<tr bgcolor="a8bd85">  <td>22/02/14 02:59:07</td>   <td>2858</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.SearchPageTitleTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@7063686f]">SearchPageTitleTest</td> 
+  <td>main@379886173</td>   <td></td> </tr>
+<tr bgcolor="a8bd85">  <td>22/02/14 03:00:16</td>   <td>71405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.closeBrowser()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@7063686f]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@379886173</td>   <td></td> </tr>
+<tr bgcolor="7fa8df">  <td>22/02/14 02:59:02</td>   <td>-2624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setupTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.LoginPageTest@37864b77]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>main@379886173</td>   <td></td> </tr>
+<tr bgcolor="a8bd85">  <td>22/02/14 02:59:43</td>   <td>38856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchPageTest.setupTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@7063686f]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>main@379886173</td>   <td></td> </tr>
+<tr bgcolor="a8bd85">  <td>22/02/14 02:59:43</td>   <td>38856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchPageTest.setupTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@7063686f]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>main@379886173</td>   <td></td> </tr>
+<tr bgcolor="7fa8df">  <td>22/02/14 02:59:02</td>   <td>-2798</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.adaptikPolicyAndBilling.qa.testCases.LoginPageTest@37864b77]">loginPageTitleTest</td> 
+  <td>main@379886173</td>   <td></td> </tr>
+<tr bgcolor="a8bd85">  <td>22/02/14 02:59:46</td>   <td>41325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.AccountSearch(java.lang.String)[pri:1, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@7063686f]">AccountSearch</td> 
+  <td>main@379886173</td>   <td></td> </tr>
+<tr bgcolor="a8bd85">  <td>22/02/14 02:59:43</td>   <td>38856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchPageTest.setupTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@7063686f]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>main@379886173</td>   <td></td> </tr>
+<tr bgcolor="7fa8df">  <td>22/02/14 02:59:05</td>   <td>291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDownTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.LoginPageTest@37864b77]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@379886173</td>   <td></td> </tr>
+<tr bgcolor="a8bd85">  <td>22/02/14 02:59:46</td>   <td>41325</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.AccountSearch(java.lang.String)[pri:1, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@7063686f]">AccountSearch</td> 
+  <td>main@379886173</td>   <td></td> </tr>
+<tr bgcolor="7fa8df">  <td>22/02/14 02:59:02</td>   <td>-2624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setupTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.LoginPageTest@37864b77]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td>  <td>main@379886173</td>   <td></td> </tr>
+<tr bgcolor="a8bd85">  <td>22/02/14 03:00:16</td>   <td>71405</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.closeBrowser()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.SearchPageTest@7063686f]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@379886173</td>   <td></td> </tr>
+<tr bgcolor="7fa8df">  <td>22/02/14 02:59:05</td>   <td>291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDownTest()[pri:0, instance:com.adaptikPolicyAndBilling.qa.testCases.LoginPageTest@37864b77]">&lt;&lt;tearDownTest</td> 
+<td>&nbsp;</td>  <td>main@379886173</td>   <td></td> </tr>
 </table>
